# C_Matcher

./: .env.example  .gitignore  Dockerfile  README.md  check_job_status.py  debug_binbin_match.py  debug_engineer_match.py  debug_logs.txt  debug_matches.py  debug_recruiter_match.py  docker-compose.yml  pyproject.toml  pyproject.toml.bak  render.yaml  requirements.txt  start_local.sh  temp_resume.txt  vercel.json
api/: main.py
apps/extension/: README.md
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: apiBase.ts
infra/migrations/: 000_init.sql  001_update_dim.sql
services/: __init__.py
services/api/: dependencies.py  main.py  schemas.py
services/explain/: __init__.py  service.py
services/ingest/: __init__.py  fetch_jobs.py  run_once.py
services/match/: __init__.py  rerank.py  service.py
services/shared/: __init__.py  config.py  db.py  embeddings.py  migrate.py  models.py  resume.py  schemas.py  storage.py
static/: 404.html  index.html  index.txt
static/_next/static/chunks/: 964-b99980ceb3822cea.js
static/_next/static/chunks/app/: layout-f5141ac5d4a2b6b6.js  page-f9bb7e2787fbd93b.js
static/_next/static/css/: 63f586ab8d90c6cb.css
